--- a/game/Pong Game/index.html
+++ b/game/Pong Game/index.html
@@ -39,169 +39,37 @@
       border-radius: 5px;
       cursor: pointer;
     }
+
+    #game-start {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    z-index: 100;
+  }
   </style>
 </head>
 <body>
+  <canvas id="pong" width="500" height="700"></canvas>
+  <div id="game-start">
+    <h1 id="start">Ayo Main!!</h1>
+    <button>Mulai</button>
+  </div>
 
-<canvas id="pong" width="500" height="700"></canvas>
-<div id="game-over">
-  <h1 id="winner">Pemain Menang!</h1>
-  <button onclick="startGame()">Main Lagi</button>
-</div>
+  <div id="game-over">
+    <h1 id="winner">Pemain Menang!</h1>
+    <button onclick="startGame()">Main Lagi</button>
+  </div>
+<script src="index.js"></script>
 
-<script>
-const canvas = document.getElementById('pong');
-const ctx = canvas.getContext('2d');
-
-const paddleWidth = 100;
-const paddleHeight = 10;
-const paddleSpeed = 7;
-
-let player = { x: 200, y: canvas.height - 20 };
-let bot = { x: 200, y: 10 };
-
-let ball = {
-  x: canvas.width / 2,
-  y: canvas.height / 2,
-  radius: 7,
-  speed: 4,
-  dx: 3,
-  dy: -4
-};
-
-let score = { player: 0, bot: 0 };
-const winningScore = 5;
-let isGameOver = false;
-
-const gameOverDiv = document.getElementById('game-over');
-const winnerText = document.getElementById('winner');
-
-function drawPaddle(p) {
-  ctx.fillStyle = 'white';
-  ctx.fillRect(p.x, p.y, paddleWidth, paddleHeight);
-}
-
-function drawBall() {
-  ctx.beginPath();
-  ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2);
-  ctx.fillStyle = 'white';
-  ctx.fill();
-  ctx.closePath();
-}
-
-function drawNet() {
-  ctx.setLineDash([5, 15]);
-  ctx.beginPath();
-  ctx.moveTo(0, canvas.height / 2);
-  ctx.lineTo(canvas.width, canvas.height / 2);
-  ctx.strokeStyle = 'limegreen';
-  ctx.stroke();
-  ctx.setLineDash([]);
-}
-
-function drawScore() {
-  ctx.font = '20px Courier New';
-  ctx.fillText(`Pemain: ${score.player}`, 20, canvas.height / 2 + 40);
-  ctx.fillText(`Bot: ${score.bot}`, 20, canvas.height / 2 - 20);
-}
-
-function resetBall() {
-  ball.x = canvas.width / 2;
-  ball.y = canvas.height / 2;
-  ball.dx = (Math.random() > 0.5 ? 1 : -1) * (2 + Math.random() * 2);
-  ball.dy = (Math.random() > 0.5 ? 1 : -1) * (2 + Math.random() * 2);
-}
-
-function moveBot() {
-  const target = ball.x - (paddleWidth / 2);
-  if (bot.x < target) {
-    bot.x += Math.min(paddleSpeed - 2, target - bot.x);
-  } else {
-    bot.x -= Math.min(paddleSpeed - 2, bot.x - target);
-  }
-}
-
-function updateBall() {
-  ball.x += ball.dx;
-  ball.y += ball.dy;
-
-  // Pantul dinding kiri kanan
-  if (ball.x - ball.radius <= 0 || ball.x + ball.radius >= canvas.width) {
-    ball.dx *= -1;
-  }
-
-  // Pantul paddle pemain
-  if (ball.y + ball.radius >= player.y &&
-      ball.x >= player.x && ball.x <= player.x + paddleWidth) {
-    ball.dy *= -1;
-    ball.speed += 0.2;
-  }
-
-  // Pantul paddle bot
-  if (ball.y - ball.radius <= bot.y + paddleHeight &&
-      ball.x >= bot.x && ball.x <= bot.x + paddleWidth) {
-    ball.dy *= -1;
-  }
-
-  // Skor bot
-  if (ball.y - ball.radius > canvas.height) {
-    score.bot++;
-    checkGameOver();
-    resetBall();
-  }
-
-  // Skor pemain
-  if (ball.y + ball.radius < 0) {
-    score.player++;
-    checkGameOver();
-    resetBall();
-  }
-}
-
-function checkGameOver() {
-  if (score.player >= winningScore || score.bot >= winningScore) {
-    isGameOver = true;
-    winnerText.textContent = score.player >= winningScore ? 'Pemain Menang!' : 'Bot Menang!';
-    gameOverDiv.style.display = 'block';
-  }
-}
-
-function draw() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  drawPaddle(player);
-  drawPaddle(bot);
-  drawBall();
-  drawNet();
-  drawScore();
-}
-
-function gameLoop() {
-  if (!isGameOver) {
-    draw();
-    moveBot();
-    updateBall();
-    requestAnimationFrame(gameLoop);
-  }
-}
-
-function startGame() {
-  isGameOver = false;
-  score.player = 0;
-  score.bot = 0;
-  resetBall();
-  gameOverDiv.style.display = 'none';
-  gameLoop();
-}
-
-canvas.addEventListener('mousemove', (e) => {
-  const rect = canvas.getBoundingClientRect();
-  player.x = e.clientX - rect.left - paddleWidth / 2;
-  if (player.x < 0) player.x = 0;
-  if (player.x + paddleWidth > canvas.width) player.x = canvas.width - paddleWidth;
-});
-
-startGame();
 </script>
-
 </body>
 </html>
